fix: updated names

--- a/test/index.html
+++ b/test/index.html
@@ -188,7 +188,7 @@
 
   <script type="module">
     // Import the analytics tracker
-    // In a real app, you would import from '@atif910/analytics-tracker'
+    // In a real app, you would import from 'user-analytics-tracker'
     // For testing, we'll use a dynamic import from the dist folder
     import { AnalyticsService } from '../dist/index.esm.js';
 
